# cibmtr

./: pyproject.toml
notebooks/: nn_start.ipynb  test.ipynb
src/cibmtr/: __init__.py  metric.py  settings.py  test.py
